--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-scroll-to-top": "^1.0.8",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.45.0",
     "typescript": "^4.6.2",
